# Zeno

./: .env.example  .gitignore  DEVELOPMENT.md  Makefile  README.md
app/: .env.example  next.config.mjs  package.json
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/api/chat/: route.ts
app/src/components/: Chat.tsx  ProductCard.tsx
app/src/lib/: types.ts
app/src/lib/affiliate/: amazon.ts
app/src/lib/agent/: loop.ts
app/src/lib/ai/: gateway.ts  needspec.ts
app/src/lib/db/: client.ts  events.ts
app/src/lib/ranking/: rank.ts
app/src/lib/retrieval/: search.ts
db/: README.md
db/migrations/: 0001_init.sql
db/seed/: 0002_seed_3c.sql
docs/: 00-product-vision.md  01-market-analysis.md  02-product-requirements.md  03-ux-conversational-commerce.md  04-system-architecture.md  05-ai-engine.md  06-supply-side.md  07-data-model.md  08-business-model.md  09-trust-safety-compliance.md  10-roadmap.md  11-metrics.md  12-demand-deep-dive.md  13-execution-kickoff.md  README.md
eval/: golden_needs.jsonl  run_eval.py
pipeline/: README.md  pyproject.toml
pipeline/zeno_pipeline/: __init__.py  db.py  enrich.py  ingest.py  models.py  run.py
